--- a/app/components/footer.module.css
+++ b/app/components/footer.module.css
@@ -11,7 +11,7 @@
     align-items: center;
     justify-content: center;
     padding: 1rem 0;
-    background-color: #ffa340cb;
+    background-color: #d48d42;
     width: 100%;
     height: 7vh;
   }
